--- a/index.html
+++ b/index.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <title>RD - Michael Andrade Projeto</title>
-    <style>
-        body {
-            margin: 0;
-            background-color: black;
-        }
-        #image-container {
-            width: 99vw;
-            height: 99vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        img {
-            width: 100%;
-            height: auto;
-            object-fit: contain;
-        }
-    </style>
-    <script>
-        let currentIndex = 0;
-        const images = ['imagem.png','imagem2.png', 'imagem3.png', 'imagem4.png'];
-
-        function changeImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            document.getElementById('image').src = images[currentIndex];
-        }
-
-        setInterval(changeImage, 15000); // Troca a imagem a cada 15 segundos
-
-        function refreshPage() {
-            location.reload();
-        }
-
-        setInterval(refreshPage, 60000); // Atualiza a página a cada 60 segundos
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exibição Automática de Imagens</title>
+  <style>
+    /* Estilos básicos */
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    #image-container {
+      width: 100%;
+      height: 400px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f0f0f0;
+    }
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+    }
+  </style>
 </head>
 <body>
-    <div id="image-container">
-        <img id="image" src="imagem.png" alt="Imagem">
-    </div>
+  <div id="image-container">
+    <img id="current-image" src="imagens/imagem1.jpg" alt="Imagem em Exibição">
+  </div>
+
+  <script>
+    const imagens = [
+      'imagens/imagem1.jpg',
+      'imagens/imagem2.jpg',
+      'imagens/imagem3.jpg',
+      'imagens/imagem4.jpg'
+    ];
+
+    let indexAtual = 0;
+    const tempoAtualizacao = 1000; // 1000ms = 1 segundo
+
+    function atualizarImagem() {
+      // Atualiza a imagem
+      const imagemElement = document.getElementById('current-image');
+      imagemElement.src = imagens[indexAtual];
+
+      // Passa para a próxima imagem
+      indexAtual = (indexAtual + 1) % imagens.length;
+    }
+
+    // Atualiza a imagem a cada 'tempoAtualizacao' milissegundos
+    setInterval(atualizarImagem, tempoAtualizacao);
+  </script>
 </body>
 </html>
