--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 </head>
 <body>
   <div id="image-container">
-    <img id="current-image" src="imagens/imagem1.jpg" alt="Imagem em Exibição">
+    <img id="current-image" src="image/imagem1.jpg" alt="Imagem em Exibição">
   </div>
 
   <script>
     const imagens = [
-      'imagens/imagem1.jpg',
-      'imagens/imagem2.jpg',
-      'imagens/imagem3.jpg',
-      'imagens/imagem4.jpg'
+      'image/imagem1.jpg',
+      'image/imagem2.jpg',
+      'image/imagem3.jpg',
+      'image/imagem4.jpg'
     ];
 
     let indexAtual = 0;
