--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 </head>
 <body>
   <div id="image-container">
-    <img id="current-image" src="image/imagem1.jpg" alt="Imagem em Exibição">
+    <img id="current-image" src="image/imagem1.png" alt="Imagem em Exibição">
   </div>
 
   <script>
     const imagens = [
-      'image/imagem1.jpg',
-      'image/imagem2.jpg',
-      'image/imagem3.jpg',
-      'image/imagem4.jpg'
+      'image/imagem1.png',
+      'image/imagem2.png',
+      'image/imagem3.png',
+      'image/imagem4.png'
     ];
 
     let indexAtual = 0;
