--- a/index.html
+++ b/index.html
@@ -14,39 +14,47 @@
     }
     #image-container {
       width: 100%;
-      height: 100%;
+      height: 400px;
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: #f0f0f0;
+      overflow: hidden; /* Garante que a imagem não ultrapasse o contêiner */
     }
     img {
       max-width: 100%;
       max-height: 100%;
       object-fit: contain;
+      transition: opacity 0.5s ease-in-out; /* Transição suave para troca de imagem */
+      opacity: 1; /* Inicialmente a imagem é visível */
     }
   </style>
 </head>
 <body>
   <div id="image-container">
-    <img id="current-image" src="imagens/imagem.png" alt="Imagem em Exibição">
+    <img id="current-image" src="imagens/imagem1.png" alt="Imagem em Exibição">
   </div>
 
   <script>
     const imagens = [
-      'imagens/imagem.png',
+      'imagens/imagem1.png',
       'imagens/imagem2.png',
       'imagens/imagem3.png',
       'imagens/imagem4.png'
     ];
 
     let indexAtual = 0;
-    const tempoAtualizacao = 1000; // 1000ms = 1 segundo
+    const tempoAtualizacao = 3000; // 3000ms = 3 segundos
 
     function atualizarImagem() {
-      // Atualiza a imagem
       const imagemElement = document.getElementById('current-image');
-      imagemElement.src = imagens[indexAtual];
+      imagemElement.style.opacity = 0; // Faz a imagem desaparecer com transição
+
+      // Espera 500ms (tempo da transição) e depois troca a imagem
+      setTimeout(() => {
+        imagemElement.src = imagens[indexAtual];
+        imagemElement.style.opacity = 1; // Faz a nova imagem aparecer com transição
+      }, 500);
 
       // Passa para a próxima imagem
       indexAtual = (indexAtual + 1) % imagens.length;
