--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 </head>
 <body>
   <div id="image-container">
-    <img id="current-image" src="imagens/imagem1.png" alt="Imagem em Exibição">
+    <img id="current-image" src="imagens/imagem.png" alt="Imagem em Exibição">
   </div>
 
   <script>
     const imagens = [
-      'imagens/imagem1.png',
+      'imagens/imagem.png',
       'imagens/imagem2.png',
       'imagens/imagem3.png',
       'imagens/imagem4.png'
