--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     #image-container {
       width: 100%;
-      height: 400px;
+      height: 800px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -44,7 +44,7 @@
     ];
 
     let indexAtual = 0;
-    const tempoAtualizacao = 1000; // 1000ms = 3 minutos
+    const tempoAtualizacao = 10000; // 10 seg
 
     function atualizarImagem() {
       const imagemElement = document.getElementById('current-image');
