--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exibição Automática de Imagens</title>
+  <title>Produtividade CD EMBU - RD Raia Drogasil</title>
   <style>
     /* Estilos básicos */
     body {
