--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 </head>
 <body>
   <div id="image-container">
-    <img id="current-image" src="https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem.png" alt="Imagem em Exibição">
+    <img id="current-image" src="https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem.png?v=2" alt="Imagem em Exibição">
   </div>
 
   <script>
     const imagens = [
-      'https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem.png',
-      'https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem2.png',
-      'https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem3.png',
-      'https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem4.png'
+      'https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem.png?v=2',
+      'https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem2.png?v=2',
+      'https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem3.png?v=2',
+      'https://raw.githubusercontent.com/RD-Saude/Produtividade-24hr/main/imagem4.png?v=2'
     ];
 
     let indexAtual = 0;
